styles/globals.scss
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400;500;700&display=swap');

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  html {
    font-family: 'Inconsolata', sans-serif;
  }
}

a {
  @apply underline underline-offset-2 transition ease-out active:text-blue-400 active:scale-110;
}

$hamburger-color: rgb(147 197 253);
$hamburger-thickness: 3px;
$hamburger-size: 52px;

.ham {
  .inner > * {
    box-shadow: 0 0 10px black;
  }
}

@import '~delicious-hamburgers/scss/base';
@import '~delicious-hamburgers/scss/animations/shelf';

